mission2/ressources/mission2-cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc0afee153a84e39ec9": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/24",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "AWS-secgame-mission2-VPC-id"
          }
        ]
      }
    },
    "subnet049310943f692b82a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.0.0/24",
        "AvailabilityZone": "us-east-1c",
        "VpcId": {
          "Ref": "vpc0afee153a84e39ec9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "AWS-secgame-mission2-subnet-id"
          }
        ]
      }
    },
    "igw0042d47ef45c15b28": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "AWS-secgame-IGW-mission2-id"
          }
        ]
      }
    },
    "dopta6b558dc": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl021e49f24f58cedc6": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0afee153a84e39ec9"
        }
      }
    },
    "rtb06b919ba509d6e37e": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0afee153a84e39ec9"
        }
      }
    },
    "eip3228246131": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "gw1"
      ],
      "Properties": {
        "Domain": "vpc"
      }
    },
    "instancei048eb1c54b27d00e7": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-0b69ea66ff7391e80",
        "InstanceType": "t2.micro",
        "KeyName": "Evilcorp-evilkeypair",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Security game mission",
            "Value": "Mission 2"
          },
          {
            "Key": "Name",
            "Value": "Evilcorp-evilserver-for-evil-access"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet049310943f692b82a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "192.168.0.249",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgAWSsecgamemission2SGid"
              }
            ]
          }
        ],
        "UserData": {
			"Fn::Base64": {
				"Fn::Join" : [
					"\n",
					[
						"#!/bin/bash",
						"echo \"fils de pute\""
					]
				]
			}
		}
      }
    },
    "instancei0cdf224a1c1c86f1c": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "arn:aws:iam::513637227442:instance-profile/ec2Admin",
        "ImageId": "ami-0b69ea66ff7391e80",
        "InstanceType": "t2.micro",
        "KeyName": "Evilcorp-evilkeypair",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Security game mission",
            "Value": "Mission 2"
          },
          {
            "Key": "Name",
            "Value": "Evilcorp-evilserver-for-evil-data"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet049310943f692b82a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "192.168.0.136",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgAWSsecgamemission2SGid"
              }
            ]
          }
        ]
      }
    },
    "sgAWSsecgamemission2SGid": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for mission 2 of AWS secgame",
        "VpcId": {
          "Ref": "vpc0afee153a84e39ec9"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl021e49f24f58cedc6"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl021e49f24f58cedc6"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl021e49f24f58cedc6"
        },
        "SubnetId": {
          "Ref": "subnet049310943f692b82a"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0afee153a84e39ec9"
        },
        "InternetGatewayId": {
          "Ref": "igw0042d47ef45c15b28"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb06b919ba509d6e37e"
        },
        "GatewayId": {
          "Ref": "igw0042d47ef45c15b28"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0afee153a84e39ec9"
        },
        "DhcpOptionsId": {
          "Ref": "dopta6b558dc"
        }
      }
    },
    "assoc1": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "eip3228246131",
            "AllocationId"
          ]
        },
        "InstanceId": {
          "Ref": "instancei048eb1c54b27d00e7"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAWSsecgamemission2SGid"
        },
        "IpProtocol": "-1",
        "CidrIp": "80.13.79.15/32"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAWSsecgamemission2SGid"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": {
          "Ref": "sgAWSsecgamemission2SGid"
        },
        "SourceSecurityGroupOwnerId": "513637227442"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAWSsecgamemission2SGid"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": ""
}
